--- a/ProtoV1/ProtoV1/Views/Shared/_Layout.cshtml
+++ b/ProtoV1/ProtoV1/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Etusivu", "Index", "Etusivu")</li>
+                    <li>@Html.ActionLink("Asiakastiedot", "Index", "Asiakastiedot")</li>
                 </ul>
             </div>
         </div>
