Lisätty Asiakastapahtumat controller

--- a/ProtoV1/ProtoV1/Views/Shared/_Layout.cshtml
+++ b/ProtoV1/ProtoV1/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Etusivu", "Index", "Etusivu")</li>
                     <li>@Html.ActionLink("Asiakastiedot", "Index", "Asiakastiedot")</li>
+                    <li>@Html.ActionLink("Asiakastapahtumat", "Index", "Asiakastapahtumat")</li>
                 </ul>
             </div>
         </div>
