--- a/ProtoV1/ProtoV1/Views/Shared/_Layout.cshtml
+++ b/ProtoV1/ProtoV1/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Etusivu", "Index", "Etusivu")</li>
                     <li>@Html.ActionLink("Asiakastiedot", "Index", "Asiakastiedot")</li>
                     <li>@Html.ActionLink("Laskutustiedot", "Index", "Laskutustiedot")</li>
+                    <li>@Html.ActionLink("Asiakasluokittelu", "Index", "Asiakasluokittelu")</li>
                     <li>@Html.ActionLink("Asiakastapahtumat", "Index", "Asiakastapahtumat")</li>
                 </ul>
             </div>
