--- a/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
@@ -1,7 +1,41 @@
-﻿
+﻿@Model.ProtoV1.Models;
 @{
     ViewBag.Title = "Index";
 }
 
 <h2>Asiakastiedot</h2>
+
+<p> Asiakkaan perustiedot </p>
+
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>Asiakasnumero</th>
+            <th>Etunimi</th>
+            <th>Sukunimi</th>
+            <th>Osoite</th>
+            <th>Postitoimipaikat</th>
+            <th>Postinumero</th>
+            <th>Puhelin</th>
+            <th>Sähköposti</th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (ProtoV1.Models.AsiakkaanPerustiedot prod in Model)
+         {
+            <tr>
+                <td>@prod.Asiakasnumero</td>
+                <td>@prod.Etunimi</td>
+                <td>@prod.Sukunimi</td>
+                <td>@prod.Osoite</td>
+                <td>@prod.Postitoimipaikat</td>
+                <td>@prod.Postinumero</td>
+                <td>@prod.Puhelin</td>
+                <td>@prod.Sähköposti</td>
+            </tr>         
+
+         }
+    </tbody>
+</table> 
 
