--- a/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Asiakastiedot</h2>
 
-<p> Asiakkaan perustiedot </p>
+<p> Asiakkaan perustiedot näkymä </p>
 
 <table class="table table-hover">
     <thead>
