--- a/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
@@ -1,39 +1,73 @@
-﻿@model IEnumerable<ProtoV1.Models.AsiakkaanPerustiedot>
+﻿@model ProtoV1.Models.AsiakkaanPerustiedot
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Asiakastiedot</h2>
+<h2>Asiakkaan perustiedot</h2>
+@using (Html.BeginForm(FormMethod.Post))
+{
+    <div class="form-group">
+        @Html.LabelFor(model => model.Asiakasnumero, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Asiakasnumero, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
 
-<p> Asiakkaan perustiedot näkymä </p>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Etunimi, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Etunimi, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
 
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Asiakasnumero</th>
-            <th>Etunimi</th>
-            <th>Sukunimi</th>
-            <th>Osoite</th>
-            <th>Postinumero</th>
-            <th>Puhelin</th>
-            <th>Sähköposti</th>
-        </tr>
-    </thead>
-    <tbody>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Sukunimi, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Sukunimi, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
 
-        @foreach (ProtoV1.Models.AsiakkaanPerustiedot prod in Model)
-         {
-            <tr>
-                <td>@prod.Asiakasnumero</td>
-                <td>@prod.Etunimi</td>
-                <td>@prod.Sukunimi</td>
-                <td>@prod.Osoite</td>
-                <td>@prod.Postinumero</td>
-                <td>@prod.Puhelin</td>
-                <td>@prod.Sähköposti</td>
-            </tr>         
+    <div class="form-group">
+        @Html.LabelFor(model => model.Puhelin, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Puhelin, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
 
-         }
-    </tbody>
-</table> 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Osoite, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Osoite, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Postinumero, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Postinumero, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Postitoimipaikat, htmlAttributes: new { @class = "control-label col-md-2" })
+        @*<div class="col-md-10">
+            @Html.EditorFor(model => model.Postinumero, new { htmlAttributes = new { @class = "form-control" } })
+        </div>*@
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Sähköposti, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Sähköposti, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Tallenna muutokset" class="btn btn-default" />
+            <input type="submit" value="Peruuta" class="btn btn-default"/>
+        </div>
+    </div>
+}
+
 
