--- a/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Asiakkaan perustiedot</h2>
+<h2>Asiakkaanperustiedot</h2>
 @using (Html.BeginForm(FormMethod.Post))
 {
     <div class="form-group">
@@ -48,12 +48,12 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Postitoimipaikat, htmlAttributes: new { @class = "control-label col-md-2" })
-        @*<div class="col-md-10">
+    @*<div class="form-group">
+        <label for="Postitoimipaikat">Postitoimipaikka</label>
+        <div class="col-md-10">
             @Html.EditorFor(model => model.Postinumero, new { htmlAttributes = new { @class = "form-control" } })
-        </div>*@
-    </div>
+        </div>
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Sähköposti, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -65,7 +65,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Tallenna muutokset" class="btn btn-default" />
-            <input type="submit" value="Peruuta" class="btn btn-default"/>
+            @*<input type="submit" value="Peruuta" class="btn btn-default"/>*@
         </div>
     </div>
 }
