Login näkymään typon korjaus

--- a/ProtoV1/ProtoV1/Views/Logins/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Logins/Index.cshtml
@@ -30,7 +30,7 @@
             </div>
         </div>
         <label class="text-danger">
-            @Html.DisplayFor(model => model.LoginIDErrorMessage)
+            @Html.DisplayFor(model => model.LoginErrorMessage)
         </label>
 
         <div class="form-group">
