--- a/ProtoV1/ProtoV1/Views/Logins/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Logins/Index.cshtml
@@ -29,9 +29,9 @@
                 @Html.ValidationMessageFor(model => model.Salasana, "", new { @class = "text-danger" })
             </div>
         </div>
-        <label class="text-danger">
+        @*<label class="text-danger">
             @Html.DisplayFor(model => model.LoginErrorMessage)
-        </label>
+        </label>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
