Buttonin lisäys asiakastapahtuma näkymään

--- a/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Index.cshtml
@@ -33,8 +33,9 @@
 
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
-        @*<input type="button" value="Lisää uusi tapahtuma" class="btn btn-default" />*@
-        @Html.ActionLink("Lisää uusi tapahtuma", "Create", new { @class = "btn btn-primary btn-sm"} )
+        <button>@Html.ActionLink("Lisää uusi tapahtuma", "Create")</button>
     </div>
 </div>
+
+
 
