--- a/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Create.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Create.cshtml
@@ -40,7 +40,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Kuvaus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Kuvaus, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.TextAreaFor(model => model.Kuvaus, new { @class = "tinymce-simple span12", @row = "170", @cols = "45", @width = "40%" })
+                @*@Html.EditorFor(model => model.Kuvaus, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Kuvaus, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +49,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ratkaisu, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ratkaisu, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Ratkaisu, new { @class = "tinymce-simple span12", @row = "170", @cols = "45", @width = "40%" })
+                @*@Html.EditorFor(model => model.Ratkaisu, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Ratkaisu, "", new { @class = "text-danger" })
             </div>
         </div>
