--- a/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Create.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Create.cshtml
@@ -14,12 +14,12 @@
         <h4>Asiakastapahtumat</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @*<div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.Asiakasnumero, "Asiakasnumero", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.ValidationMessageFor(model => model.Asiakasnumero, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Päivämäärä, htmlAttributes: new { @class = "control-label col-md-2" })
