Etusivu näkymään details lisääminen

--- a/ProtoV1/ProtoV1/Views/Etusivu/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Etusivu/Index.cshtml
@@ -23,17 +23,22 @@
 
         @foreach (ProtoV1.Models.AsiakkaanPerustiedot prod in Model)
         {
-        <tr>
-            <td>@prod.Asiakasnumero</td>
-            <td>@prod.Etunimi</td>
-            <td>@prod.Sukunimi</td>
-            <td>@prod.Osoite</td>
-            <td>@prod.Postinumero</td>
-            <td>@prod.Postitoimipaikat.Postitoimipaikka</td>
-        </tr>
+            <tr>
+                <td>@prod.Asiakasnumero</td>
+                <td>@prod.Etunimi</td>
+                <td>@prod.Sukunimi</td>
+                <td>@prod.Osoite</td>
+                <td>@prod.Postinumero</td>
+                <td>@prod.Postitoimipaikat.Postitoimipaikka</td>
+            </tr>
         }
     </tbody>
 </table>
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <button>@Html.ActionLink("Lisää uusi asiakas", "Details")</button>
+    </div>
+</div>
 
 
 
