Lisää muokkausta etusivuun

--- a/ProtoV1/ProtoV1/Views/Etusivu/Details.cshtml
+++ b/ProtoV1/ProtoV1/Views/Etusivu/Details.cshtml
@@ -50,16 +50,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.AsiakkaanPerustiedot.Postitoimipaikat.Postitoimipaikka)
+            @Html.DisplayNameFor(model => model.Postitoimipaikat.Postitoimipaikka)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AsiakkaanPerustiedot.Postitoimipaikat.Postitoimipaikka)
+            @Html.DisplayFor(model => model.Postitoimipaikat.Postitoimipaikka)
         </dd>
 
     </dl>
 </div>
 <p>
-    @*@Html.ActionLink("Edit", "Edit", new { id = Model.LaskutustietoID })*@
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Asiakasnumero })
     @Html.ActionLink("Back to List", "Index")
 </p>
