--- a/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastiedot/Index.cshtml
@@ -100,11 +100,12 @@
         </tr>
     </thead>
 </table>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button>@Html.ActionLink("Lisää uusi asiakas", "Create")</button>
-            </div>
-        </div>
+<div class="form-group">
+    <div class="col-md-offset-2 col-md-10">
+        <button>@Html.ActionLink("Lisää uusi asiakas", "Create")</button> &nbsp; &nbsp; &nbsp; &nbsp;<button>@Html.ActionLink("Seuraava", "Index")</button>
+    </div>
+</div>
+     
   
 
 
