Asiakastapahtumat lisäys-näkymään lisätty asiakasnumero

--- a/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Create.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastapahtumat/Create.cshtml
@@ -17,6 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Asiakasnumero, "Asiakasnumero", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                @Html.EditorFor(model => model.Asiakasnumero, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Asiakasnumero, "", new { @class = "text-danger" })
             </div>
         </div>
