--- a/ProtoV1/ProtoV1/Views/Etusivu/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Etusivu/Index.cshtml
@@ -6,6 +6,11 @@
 
 <h2>Etusivu</h2>
 
+<form class="example" action="action_page.php">
+    <input type="text" placeholder="Search.." name="search">
+    <button type="submit"><i class="glyphicon-fast-forward"></i></button>
+</form>
+
 <table class="table table-hover">
     <thead>
         <tr>
