--- a/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
@@ -9,6 +9,8 @@
     <input type="checkbox" checked class="icheck-box-flat"> <span class="checkbox-label">Eläkeläisalennus</span>
 </div>
 
+<h4>Laitteet</h4>
+
 <div class="styled-chekbox">
     <input type="checkbox" checked class="icheck-box-flat"><span class="checkbox-label">TV</span>
 </div>
@@ -27,7 +29,19 @@
 <div class="styled-chekbox">
     <input type="checkbox" checked class="icheck-box-flat"><span class="checkbox-label">Tabletti</span>
 </div>
-    
+
+<h4>Nettiyhteys</h4>
+
+<div class="styled-chekbox">
+    <input type="checkbox" checked class="icheck-box-flat"><span class="checkbox-label">Wlan</span>
+</div>
+<div class="styled-chekbox">
+    <input type="checkbox" checked class="icheck-box-flat"><span class="checkbox-label">Mokkula</span>
+</div>
+
+<h4>Lisätietoja</h4>
+
+
 
 
 <label class="col-lg-2 control-label">
