--- a/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
@@ -39,15 +39,13 @@
     <input type="checkbox" checked class="icheck-box-flat"><span class="checkbox-label">Mokkula</span>
 </div>
 
-<h4>Lisätietoja</h4>
 
 
 
 
-<label class="col-lg-2 control-label">
-    Lisätietoja
-</label>
-<div class="col-lg-10">@Html.TextAreaFor(model => model.Asiakasnumero, new { @class = "tinymce-simple span12", @row = "170", @cols = "45", @width = "40%" })</div>
 
+
+
+<button>Tallenna</button> <button> Seuraava</button> 
 
 
