--- a/ProtoV1/ProtoV1/Views/Asiakastiedot/Create.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakastiedot/Create.cshtml
@@ -71,7 +71,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Tallenna" class="btn btn-default" />
+            <input type="submit" value="Tallenna muutokset" class="btn btn-default" /> &nbsp; &nbsp; &nbsp; &nbsp;<button>@Html.ActionLink("Seuraava", "Create", "Laskutustiedot")</button>
         </div>
     </div>
 </div>
