Asiakasluokittelu index( seuraava,takaisin buttonit)

--- a/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
@@ -43,9 +43,7 @@
 
 
 
-
-
-
-<button>Tallenna</button> <button> Seuraava</button> 
+<button>@Html.ActionLink("Takaisin", "Index", "Laskutustiedot")</button>
+<button> @Html.ActionLink("Seuraava", "Index", "Asiakastapahtumat")</button>
 
 
