--- a/ProtoV1/ProtoV1/Views/Laskutustiedot/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Laskutustiedot/Index.cshtml
@@ -102,7 +102,7 @@
 </table>
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
-        <button>@Html.ActionLink("Tallenna muutokset", "Index")</button> &nbsp; &nbsp; &nbsp; &nbsp;<button>@Html.ActionLink("Seuraava", "Index", "Asiakasluokittelu")</button>
+        <button>@Html.ActionLink("Lisää uusi laskutustieto", "Create")</button> &nbsp; &nbsp; &nbsp; &nbsp;<button>@Html.ActionLink("Seuraava", "Index", "Asiakasluokittelu")</button>
     </div>
 </div>
 <div>
