Luokittelu create luotu

--- a/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
+++ b/ProtoV1/ProtoV1/Views/Asiakasluokittelu/Index.cshtml
@@ -41,8 +41,7 @@
 
 
 
-
-
+<button>@Html.ActionLink("Uusi luokittelu","Create","Asiakasluokittelu")</button>
 <button>@Html.ActionLink("Takaisin", "Index", "Laskutustiedot")</button>
 <button> @Html.ActionLink("Seuraava", "Index", "Asiakastapahtumat")</button>
 
